--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 @import "tailwindcss";
 
 
+/* styles.css or global.css */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;             /* Chrome, Safari, Opera */
+}
