--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   background-color: black;
   color: white; /* Ensures text is readable */
   margin: 0;
-  padding: 1;
+  padding: 2;
   font-family: Arial, sans-serif; /* Optional font change */
 }
 
@@ -38,4 +38,13 @@ body::-webkit-scrollbar {
   padding: 0;
   overflow: hidden; /* Ensure nothing spills out */
   height: 100%; /* Keep height bounded */
+}
+
+/* styles.css or global.css */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;             /* Chrome, Safari, Opera */
 }
